fixed vote share/seats label wrapping on new line

--- a/client/scss/components/_votes-vs-seats.scss
+++ b/client/scss/components/_votes-vs-seats.scss
@@ -34,6 +34,9 @@
     }
       .votes-vs-seats__key__label {
         margin: 0 20px 0 5px;
+        &:last-child{
+          margin-right:0;
+        }
       }
     
     .votes-vs-seats__chart {
